Ensures flash message is visible over modal

--- a/app/views/components/flash_message_component/flash_message_component.scss
+++ b/app/views/components/flash_message_component/flash_message_component.scss
@@ -4,5 +4,5 @@
   top: 20%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 9;
+  z-index: $zindex-toast // 1090
 }
